dvr controls: fix horizontal spacing on back to live button

--- a/src/plugins/dvr_controls/public/dvr_controls.scss
+++ b/src/plugins/dvr_controls/public/dvr_controls.scss
@@ -61,7 +61,7 @@ $circle-radius: 3.5px;
       width: $circle-radius*2;
       height: $circle-radius*2;
       border-radius: $circle-radius;
-      margin-right: $circle-radius*2;
+      margin-right: $circle-radius;
       background-color: $dvr-color;
     }
 
